--- a/index.html
+++ b/index.html
@@ -5,16 +5,17 @@
     (C)2014 All Rights Reserved.
 
     Libraries used:
-    - Angular.js                        (because the app needs logic)
-    - jQuery                            (because it's easy)
-    - Bootstrap 3                       (beacuse it's pretty)
-    - typeahead.js                      (for autocomplete)
-    - Bloodhound                        (for clever string matching)
+        - Angular.js                    (because the app needs logic)
+        - jQuery                        (because it's easy)
+        - jQuery UI                     (for draggable lists)
+        - Twitter Bootstrap             (beacuse it's pretty)
+        - UI Bootstrap                  (for typeahead.js that's Angular-friendly)
 
     Services used:
-    - AWS Elastic Beanstalk             (for hosting)
-    - node.js                           (for the backend)
-    - WAMP/MAMP                         (for app testing)
+        - AWS S3                        (for frontend hosting)
+        - AWS Elastic Beanstalk         (for backend hosting)
+        - node.js                       (for the backend)
+        - WAMP/MAMP                     (for app testing)
 
     Mmm Tatar tots... :D
 -->
@@ -37,6 +38,9 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.15/angular-route.js"></script>
       
     <script src="./js/app.js"></script>
+    
+    <!-- UI Bootstrap -->
+    <script src="http://angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.10.0.js"></script>
 
     <!-- Custom CSS -->
     <link rel="stylesheet" href="./css/shopmaster.css">
