Still a few kinks that need working out... Getting there

--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
         - jQuery UI                     (for draggable lists)
         - Twitter Bootstrap             (beacuse it's pretty)
         - UI Bootstrap                  (for typeahead.js that's Angular-friendly)
+        - Bloodhound                    (for typeahead suggestions and precaching)
 
     Services used:
-        - AWS S3                        (for frontend hosting)
-        - AWS Elastic Beanstalk         (for backend hosting)
+        - Amazon S3                     (for frontend hosting)
+        - Amazon Elastic Beanstalk      (for backend hosting)
         - node.js                       (for the backend)
         - WAMP/MAMP                     (for app testing)
 
