Moved files around and arranged them to work in Elastic Beanstalk

--- a/public/index.html
+++ b/public/index.html
@@ -10,13 +10,13 @@
         - jQuery UI                     (for draggable lists)
         - Twitter Bootstrap             (beacuse it's pretty)
         - UI Bootstrap                  (for typeahead.js that's Angular-friendly)
-        - Bloodhound                    (for typeahead suggestions and precaching)
+            ~ w/ typeahead.js
 
     Services used:
-        - Amazon S3                     (for frontend hosting)
         - Amazon Elastic Beanstalk      (for backend hosting)
         - node.js                       (for the backend)
-        - WAMP/MAMP                     (for app testing)
+        - Express                       (for easy app creation)
+        - Mongoose                      (for holding data)
 
     Mmm Tatar tots... :D
 -->
@@ -38,7 +38,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.15/angular.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.15/angular-route.js"></script>
       
-    <script src="./js/app.js"></script>
+    <script src="./js/core.js"></script>
     
     <!-- UI Bootstrap -->
     <script src="http://angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.10.0.js"></script>
