Added shopping cart favicon
Could not use class="glyphicon glyphicon-shopping-cart" from TwitterBS
because <link rel="icon" .... /> must use 'href' attribute, not 'class'.
Still looks good. If you figure out how to get the class attribute
working, go for it!

--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,7 @@
 
 <!-- Head -->
 <head>
+    <link rel="shortcut icon" href="https://openclipart.org/image/300px/svg_to_png/190699/shopingcart.png"/>
     <title>ShopMaster</title>
     
     <!-- jQuery -->
