--- a/public/index.html
+++ b/public/index.html
@@ -14,9 +14,8 @@
 
     Services used:
         - Amazon Elastic Beanstalk      (for backend hosting)
-        - node.js                       (for the backend)
-        - Express                       (for easy app creation)
-        - Mongoose                      (for holding data)
+        - node.js                       (for the backend server)
+        - Express                       (to make creating the server super simple)
 
     Mmm Tatar tots... :D
 -->
