Responsive/mobile bug fixes

--- a/public/index.html
+++ b/public/index.html
@@ -54,7 +54,7 @@
 <body ng-app="shopMaster">
     
     <!-- View container -->
-    <div ng-view class="fade-view"></div>
+    <div ng-view class="fade-view container-fluid"></div>
     
 </body>
 
