Added the Meta tag that Sam told me to add...

--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,9 @@
     <link rel="shortcut icon" href="https://openclipart.org/image/300px/svg_to_png/190699/shopingcart.png"/>
     <title>ShopMaster</title>
     
+    <!-- Viewport meta -->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    
     <!-- jQuery -->
     <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
 
