Changing the title as a test to see if EB is updating right

--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
 <!-- Head -->
 <head>
     <link rel="shortcut icon" href="https://openclipart.org/image/300px/svg_to_png/190699/shopingcart.png"/>
-    <title>ShopMaster</title>
+    <title>ShopMaster: Unleash your inner mom!</title>
     
     <!-- Viewport meta -->
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
